feat: test ci for many architecture
